Termino do projeto
1 mês de produção aprendendo sobre HTML, CSS e javascript para conseguir a conclusão deste projeto.

--- a/fem-manage-landing-page-part-9-master/style.css
+++ b/fem-manage-landing-page-part-9-master/style.css
@@ -284,74 +284,43 @@ p[data-wifth="wide"] {
   --logo-color: var(--clr-neutral-100);
 }
 
-.primary-footer-wrapper  {
+.primary-footer__wrapper  {
   display: grid;
   gap: var(--size-700);
+  justify-content: center;
+  align-items: start;
   grid-template-areas: 
     "form"
     "nav"
-    "logo-social";
+    "social"
+    "logo"
+    "copyright";
 
 }
 
-.primary-footer-logo-social {
-  grid-area: logo-social;
-
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  gap: var(--size-700);
+.primary-footer__logo {
+  grid-area: logo;
 }
 
-.primary-footer-nav {
-  grid-area: nav;
-}
-
-.primary-footer-form {
+.primary-footer__form {
   grid-area: form;
-
-  display: grid;
-  align-content: space-between;
 }
 
-.primary-footer form {
-  display: flex;
-  gap: var(--size-200);
+.primary-footer__copyright {
+  grid-area: copyright;
+  text-align: center;
+  opacity: 0.7;
 }
 
-input:where([type="text"], [type="email"], ) {
-  border-radius: 100vw;
-  border: 0;
-  padding: var(--size-300) var(--size-400);
-}
-
-@media (min-width: 47em) {
-  .primary-footer-wrapper {
-    grid-template-areas: "logo-social nav form";
-  }
-  .primary-footer-logo-social {
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: var(--size-700);
-  }
-}
-
-@media (max-width: 50em) {
-  .primary-footer-wrapper > * {
-    margin-inline: auto;
-  }
-}
-
-/* .primary-footer-wrapper  > * {
-   outline: 2px solid red; 
+.primary-footer__nav-wrapper {
+  grid-area: nav;
   margin-inline: auto;
-} */
+}
 
 /* footer navigation */
-
 .footer-nav {
   columns: 2;
-  gap: clamp(var(--size-200), 30vw, var(--size-900));
+  gap: clamp(4rem, 10vw, 7rem);
 }
 
 .footer-nav a {
@@ -362,6 +331,40 @@ input:where([type="text"], [type="email"], ) {
 .footer-nav a:is(:hover, :focus) {
   color: var(--clr-primary-400);
 }
+
+.primary-footer__form {
+  grid-area: form;
+
+  display: flex;
+  gap: var(--size-200);
+}
+
+input:where([type="text"], [type="email"], ) {
+  border-radius: 100vw;
+  border: 0;
+  padding: var(--size-300) var(--size-500);
+  width: min(100%, 14rem);
+}
+
+@media (min-width: 47em) {
+  .primary-footer__wrapper {
+    grid-template-areas: 
+    'logo nav form'
+    'social nav copyright';
+    grid-template-columns: min-content 1fr auto;
+  }
+
+  .primary-footer__copyright {
+    text-align: right;
+  }
+}
+
+@media (max-width: 47em) {
+  .primary-footer__wrapper > * {
+    margin-inline: auto;
+  }
+}
+
 /* social list  lista de icons no footer youtube,insta,X...*/
 
 .social-list{
@@ -377,6 +380,16 @@ input:where([type="text"], [type="email"], ) {
   width: var(--size-600);
   aspect-ratio: 1;
   fill: var(--clr-neutral-100);
+}
+
+@media (min-width: 47em) {
+  .social-list {
+    gap: var(--size-300);
+  }
+  .social-icon {
+    width: var(--size-500);
+    max-width: revert;
+  }
 }
 
 .social-list a:is(:hover, :focus) .social-icon{
@@ -585,7 +598,7 @@ input:where([type="text"], [type="email"], ) {
 
 /* hero image */
 
-@media (max-width: 50em) {
+@media (max-width: 47em) {
   .hero__image{
     /* position: relative; */
     order: -1;
@@ -790,9 +803,17 @@ input:where([type="text"], [type="email"], ) {
 .padding-block-900 {
   padding-block: var(--size-900);
 }
-/* video 8 completo aqui*/
+
+.margin-bottom-700 {
+  margin-block: var(--size-700);
+}
+
 .margin-bottom-700 {
   margin-block-end: var(--size-700);
+}
+
+.margin-top-900 {
+  margin-block-start: var(--size-900);
 }
 
 .display-sm-none {
